# airalert-planner

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  product-architect.md  time-series-reviewer.md
.claude/commands/: harsh-review.md  plan-next.md
.claude/skills/: product-scope-guard.md  time-series-validation.md
.github/workflows/: ci.yml
data/: README.md  sample_alerts.csv
docs/: ai_log_full_conversation.md  ai_log_initial_handoff.md  ai_process_notes.md  assumptions.md  claude_code_session_export_1782365512799.md  claude_prompts.md  product_brief.md
scripts/: generate_sample_data.py
src/airalert_planner/: analysis.py  cli.py  data.py  features.py  planner.py  plots.py  report.py  risk.py  telegram_bot.py
tests/: test_analysis.py  test_cli.py  test_data.py  test_features.py  test_planner.py  test_report.py  test_risk.py  test_sample_dataset.py  test_telegram_bot.py
