[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airalert-planner"
version = "0.1.0"
description = "Historical air raid alert time-series analysis and planning assistant MVP"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Roman" }]
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]
bot = [
  "python-telegram-bot>=21",
]

[project.scripts]
airalert-planner = "airalert_planner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
